# adi_tmcl_coe-release

./: CHANGELOG.rst  CMakeLists.txt  NOTICE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
config/: 1slave_1axis.yaml  2slaves_1axis_per_slave.yaml  2slaves_2axes_per_slave.yaml
config/autogenerated/: TMCM-1461.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/adi_tmc_coe/: tmc_coe_bldc_motor.h  tmc_coe_interpreter.h  tmc_coe_motor.h  tmc_coe_ros.h  tmc_coe_stepper_motor.h
launch/: 1slave_1axis.launch  2slaves_1axis_per_slave.launch  2slaves_2axes_per_slave.launch
msg/: TmcCoeInfo.msg
scripts/: fake_cmd_pos.sh  fake_cmd_vel.sh
src/: tmc_coe_bldc_motor.cpp  tmc_coe_interpreter.cpp  tmc_coe_motor.cpp  tmc_coe_ros.cpp  tmc_coe_ros_node.cpp  tmc_coe_stepper_motor.cpp
srv/: CSx_mode.srv  read_write_PDO.srv  read_write_SDO.srv  state_change.srv
