<?xml version="1.0"?>
<package format="2">
  <name>adi_tmc_coe</name>
  <version>1.0.1</version>
  <description>The adi_tmc_coe package</description>
  
  <maintainer email="ROS@analog.com">ROS@analog.com</maintainer>
  
  <license>BSD-3 Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>soem</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ethercat_grant</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>soem</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
